package org.example;

public enum TopicType {
    REGULAR,
    ANNOUNCEMENT,
    NEWS
}
